# llm-universal-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: evaluation_config.yaml
llm_universal_eval/: __init__.py  cli.py
llm_universal_eval/builders/: __init__.py  common.py  lighteval.py  lm_eval.py  swebench.py
llm_universal_eval/catalog/: __init__.py  benchmarks.py
llm_universal_eval/config/: __init__.py  config.py  config.yaml
llm_universal_eval/config/lighteval/: default.yaml
llm_universal_eval/config/lm_eval/: default.yaml
llm_universal_eval/config/model/: default.yaml
llm_universal_eval/config/swebench/: default.yaml
llm_universal_eval/core/: __init__.py  config.py  execution_plan.py  executor.py  types.py
llm_universal_eval/evaluation/: __init__.py  lighteval.py  lm_eval.py  swebench.py
llm_universal_eval/inference/: __init__.py  run_api.py
llm_universal_eval/inference/swebench/: __init__.py  inference.py
llm_universal_eval/planning/: __init__.py  execution_plan.py
llm_universal_eval/utils/: __init__.py  constants.py  types.py  utils.py
scripts/: debug.py
