[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-universal-eval"
version = "0.1.0"
description = "Evaluation harnesses (lm-eval, lighteval) for quantized model benchmarks"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "lm-eval[api]",
    "lighteval @ git+https://github.com/neuralmagic/lighteval.git@reasoning",
    "pyyaml",
    "langdetect",
    "immutabledict",
    "swebench[datasets]",
]

[project.scripts]
llm-universal-eval = "llm_universal_eval.cli:main"

[tool.uv]
package = true
prerelease = "allow"
