[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-universal-eval"
version = "0.1.0"
description = "Evaluation harnesses (lm-eval, lighteval) for quantized model benchmarks"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "hydra-core",
    "pydantic>=2,<3",
    "lm-eval[tasks]>=0.4.11",
    "lighteval[math,extended_tasks]",
    "pyyaml",
    "litellm[caching]>=1.66.0",
    "diskcache",
    "swebench[datasets]",
]

[project.scripts]
llm-universal-eval = "llm_universal_eval.cli:main"

[tool.uv]
package = true
prerelease = "allow"
override-dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true
